<resources>
    <string name="app_name">Flagellant</string>

    <!--menu strings-->
    <string name="settings_action">Settings</string>
    <string name="summary_action">Summary of your Sin</string>

    <!--Settings Activity strings-->
    <string name="donation_amount"> Dollars to Donate</string>
    <string name="feedbacktitle">Settings</string>
    <string name="donation_hint">Enter a dollar amount</string>
    <string name="Charity1">PETA</string>
    <string name="Charity2">Flagellent Developers</string>
    <string name="Charity3">Alea Weeks</string>
    <string name="ChangeCharity">Change Charity</string>
    <string name="focus_time">Set Focus Time</string>
    <string name="focus_hint">Enter time (in minutes)</string>
    <string name="settings_label">Settings</string>
    <string name="start_label">Flagellate</string>
    <string name="add_apps_button">ADD APPS</string>

    <!--Summary Activity Strings-->
    <string name="app_list">Your time wasting apps</string>
    <string name="start_button">Start Flagellating</string>


    <string name="pref_charity_key">pref_charity</string>
    <string name="pref_charity_title">Change Charity</string>
    <string name="pref_charity_default">developers</string>

    <string name="pref_donation_key">pref_donation</string>
    <string name="pref_donation_title">Dollars to Donate</string>
    <string name="pref_donation_default">1</string>


    <string name="pref_time_key">pref_time</string>
    <string name="pref_time_title">Flagellation Time (in minutes)</string>
    <string name="pref_time_default">40</string>

    <string name="pref_app_reddit">Reddit</string>
    <string name="pref_app_reddit_key" translatable="false">pref_app_reddit</string>
    <string name="pref_app_facebook">Facebook</string>
    <string name="pref_app_facebook_key" translatable="false">pref_app_facebook</string>
    <string name="pref_app_instagram">Instagram</string>
    <string name="pref_app_instagram_key" translatable="false">pref_app_instagram</string>

    <string name="pref_app_key">pref_app</string>
    <string name="pref_app_title">Your Time Wasting Apps</string>
    <string name="pref_app_default"></string>

    <string name="google_sign_in_button">Sign in with Google</string>


</resources>
